# crawlers_scheduler

./: .env  README.md  pyproject.toml  teste_bat.bat
cache/: scheduler_cache.pkl
crawlers_scheduler/: __init__.py  alert.py  controller.py  scheduler.py  scheduler_v1.py  schema.py  streamlit.py  streamlit_scheduler.py
source/: Crawlers_scheduler.xlsx
