[tool.poetry]
name = "crawlers-scheduler"
version = "0.1.0"
description = ""
authors = ["Rodrigo Almeida <rsa.0408@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
